Signed-off-by: Juan Iscar <juan.iscar@exponentiateam.com>

--- a/public/home_visor.html
+++ b/public/home_visor.html
@@ -107,6 +107,15 @@
         th.sorting_desc:after, th.sorting_desc:before {
             display: none !important;
         }
+        caption {
+            caption-side: top;
+            font-size: 2.2em;
+            font-weight: bold;
+            color: #ffb300;
+            margin-bottom: 8px;
+            background: transparent;
+            letter-spacing: 2px;
+        }
     </style>
 </head>
 <body>
