--- a/public/home_visor.html
+++ b/public/home_visor.html
@@ -116,15 +116,53 @@
             background: transparent;
             letter-spacing: 2px;
         }
+        .header-bar {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            width: 100vw;
+            height: 90px;
+            background: transparent;
+            position: relative;
+            z-index: 200;
+        }
+        .station-select {
+            flex: 1 1 auto;
+            text-align: center;
+            color: #fff;
+            background: #181c24;
+            font-size: 2.5em;
+            font-weight: 700;
+            letter-spacing: 2px;
+            border: none;
+            outline: none;
+            text-align-last: center;
+            margin: 0 24px;
+            padding: 0 16px;
+            border-radius: 12px;
+            appearance: none;
+        }
+        .station-select option {
+            color: #181c24;
+            background: #fff;
+            font-size: 1em;
+        }
     </style>
 </head>
 <body>
     <div class="container">
-        <div class="clock-top-left" id="clock"></div>
-        <div class="logo-top-right">
-            <img src="/img/fglogotr.gif" alt="Logo FG" />
+        <div class="header-bar">
+            <div class="clock-top-left" id="clock"></div>
+            <select id="station-select" class="station-select">
+                <option>Racó</option>
+                <option>Central</option>
+                <option>Sur</option>
+                <option>Norte</option>
+            </select>
+            <div class="logo-top-right">
+                <img src="/img/fglogotr.gif" alt="Logo FG" />
+            </div>
         </div>
-        <h1>Racó</h1>
         <table id="salidas" class="display">
             <caption>Salidas</caption>
             <thead>
