--- a/public/home_planificador.html
+++ b/public/home_planificador.html
@@ -3,56 +3,107 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FGItinerarios - Panel de Control</title>
-    <link rel="stylesheet" href="/css/styles.css">
+    <title>Planificador - FG Itinerarios</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        body {
+            font-family: 'Roboto', Arial, sans-serif;
+            background-color: #f5f5f5;
+        }
+        .navbar {
+            background-color: #1976d2;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+        }
+        .navbar-brand {
+            color: white !important;
+            font-weight: bold;
+        }
+        .nav-link {
+            color: rgba(255,255,255,0.9) !important;
+        }
+        .nav-link:hover {
+            color: white !important;
+        }
+        .nav-link.active {
+            color: white !important;
+            font-weight: bold;
+        }
+        #main-content {
+            padding: 20px;
+            min-height: calc(100vh - 56px);
+        }
+        .logo-navbar {
+            height: 40px;
+            margin-right: 10px;
+        }
+    </style>
 </head>
 <body>
-    <div id="app">
-        <div class="container">
-            <header>
-                <h1>Panel de Control</h1>
-                <button onclick="cerrarSesion()" class="btn btn-secondary">Cerrar Sesión</button>
-            </header>
-            <div id="contenido">
-                <p>Cargando...</p>
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-dark">
+        <div class="container-fluid">
+            <a class="navbar-brand d-flex align-items-center" href="#">
+                <img src="/img/fglogotr.gif" alt="Logo FG" class="logo-navbar">
+                FG Itinerarios
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav me-auto">
+                    <li class="nav-item">
+                        <a class="nav-link active" href="#" data-page="itinerarios">Itinerarios</a>
+                    </li>
+                </ul>
+                <div class="d-flex">
+                    <span class="nav-link text-white me-3" id="user-info">Usuario</span>
+                    <a class="nav-link" href="#" id="logout">Cerrar Sesión</a>
+                </div>
             </div>
         </div>
+    </nav>
+
+    <!-- Contenido principal -->
+    <div id="main-content" class="container-fluid">
+        <!-- Aquí se cargará el contenido dinámicamente -->
     </div>
+
+    <!-- Scripts -->
+    <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script>
-        // Verificar autenticación
-        const token = localStorage.getItem('token');
-        if (!token) {
-            window.location.href = '/';
-        }
+        $(document).ready(function() {
+            // Cargar itinerarios.html por defecto
+            cargarContenido('itinerarios');
 
-        // Función para cerrar sesión
-        function cerrarSesion() {
-            localStorage.removeItem('token');
-            window.location.href = '/';
-        }
+            // Manejar clicks en el menú
+            $('.nav-link').click(function(e) {
+                e.preventDefault();
+                const pagina = $(this).data('page');
+                if (pagina) {
+                    cargarContenido(pagina);
+                    // Actualizar clase active
+                    $('.nav-link').removeClass('active');
+                    $(this).addClass('active');
+                }
+            });
 
-        // Cargar datos del usuario y mostrar contenido
-        fetch('/api/usuarios/perfil', {
-            headers: {
-                'Authorization': `Bearer ${token}`
+            // Función para cargar contenido
+            function cargarContenido(pagina) {
+                $('#main-content').load(`${pagina}.html`, function(response, status, xhr) {
+                    if (status === "error") {
+                        $('#main-content').html('<div class="alert alert-danger">Error al cargar el contenido</div>');
+                    }
+                });
             }
-        })
-        .then(response => {
-            if (!response.ok) {
-                throw new Error('No autorizado');
-            }
-            return response.json();
-        })
-        .then(usuario => {
-            document.getElementById('contenido').innerHTML = `
-                <h2>Bienvenido, ${usuario.nombre}</h2>
-                <p>Email: ${usuario.email}</p>
-                <p>Rol: ${usuario.rol}</p>
-            `;
-        })
-        .catch(error => {
-            console.error('Error:', error);
-            window.location.href = '/';
+
+            // Manejar cierre de sesión
+            $('#logout').click(function(e) {
+                e.preventDefault();
+                // Aquí irá la lógica de cierre de sesión
+                window.location.href = '/login.html';
+            });
         });
     </script>
 </body>
