--- a/public/home_admin.html
+++ b/public/home_admin.html
@@ -3,214 +3,109 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FGItinerarios - Panel de Administración</title>
-    <link rel="stylesheet" href="/css/styles.css">
-    <!-- DataTables CSS -->
-    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.11.5/css/jquery.dataTables.css">
-    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/buttons/2.2.2/css/buttons.dataTables.min.css">
-    <!-- jQuery -->
-    <script type="text/javascript" src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <!-- DataTables JS -->
-    <script type="text/javascript" src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.min.js"></script>
-    <script type="text/javascript" src="https://cdn.datatables.net/buttons/2.2.2/js/dataTables.buttons.min.js"></script>
+    <title>Planificador - FG Itinerarios</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    
+    <script src="/js/auth.js"></script>
+    <style>
+        body {
+            font-family: 'Roboto', Arial, sans-serif;
+            background-color: #f5f5f5;
+        }
+        .navbar {
+            background-color: #1976d2;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+        }
+        .navbar-brand {
+            color: white !important;
+            font-weight: bold;
+        }
+        .nav-link {
+            color: rgba(255,255,255,0.9) !important;
+        }
+        .nav-link:hover {
+            color: white !important;
+        }
+        .nav-link.active {
+            color: white !important;
+            font-weight: bold;
+        }
+        #main-content {
+            padding: 20px;
+            min-height: calc(100vh - 56px);
+        }
+        .logo-navbar {
+            height: 40px;
+            margin-right: 10px;
+        }
+    </style>
 </head>
 <body>
-    <div id="app">
-        <div class="container">
-            <header>
-                <h1>Panel de Administración</h1>
-                <button onclick="cerrarSesion()" class="btn btn-secondary">Cerrar Sesión</button>
-            </header>
-            <div id="contenido">
-                <p>Cargando...</p>
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-dark">
+        <div class="container-fluid">
+            <a class="navbar-brand d-flex align-items-center" href="#">
+                <img src="/img/fglogotr.gif" alt="Logo FG" class="logo-navbar">
+                FG Itinerarios
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav me-auto">
+                    <li class="nav-item">
+                        <a class="nav-link active" href="#" data-page="itinerarios">Itinerarios</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#" data-page="estaciones">Estaciones</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#" data-page="usuarios">Usuarios</a>
+                    </li>
+                </ul>
+                <div class="d-flex">
+                    <span class="nav-link text-white me-3" id="user-info">Usuario</span>
+                    <a class="nav-link" href="#" id="logout" onclick="cerrarSesion()">Cerrar Sesión</a>
+                </div>
             </div>
         </div>
+    </nav>
+
+    <!-- Contenido principal -->
+    <div id="main-content" class="container-fluid">
+        <!-- Aquí se cargará el contenido dinámicamente -->
     </div>
+
+    <!-- Scripts -->
+    <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script>
-        // Verificar autenticación y rol
-        const token = localStorage.getItem('token');
-        if (!token) {
-            window.location.href = '/';
-        }
+        $(document).ready(function() {
+            // Cargar itinerarios.html por defecto
+            cargarContenido('itinerarios');
 
-        // Función para cerrar sesión
-        function cerrarSesion() {
-            localStorage.removeItem('token');
-            window.location.href = '/';
-        }
-
-        // Cargar datos del usuario y mostrar contenido
-        fetch('/api/usuarios/perfil', {
-            headers: {
-                'Authorization': `Bearer ${token}`
-            }
-        })
-        .then(response => {
-            if (!response.ok) {
-                throw new Error('No autorizado');
-            }
-            return response.json();
-        })
-        .then(usuario => {
-            if (usuario.rol !== 'admin') {
-                throw new Error('No tienes permisos de administrador');
-            }
-            document.getElementById('contenido').innerHTML = `
-                <h2>Bienvenido, ${usuario.nombre}</h2>
-                <p>Email: ${usuario.email}</p>
-                <p>Rol: ${usuario.rol}</p>
-                <div class="admin-actions">
-                    <h3>Acciones de Administración</h3>
-                    <button onclick="gestionarUsuarios()" class="btn btn-primary">Gestionar Usuarios</button>
-                    <button onclick="gestionarItinerarios()" class="btn btn-primary">Gestionar Itinerarios</button>
-                </div>
-            `;
-        })
-        .catch(error => {
-            console.error('Error:', error);
-            window.location.href = '/';
-        });
-
-        function gestionarUsuarios() {
-            // Implementar gestión de usuarios
-            alert('Función en desarrollo');
-        }
-
-        function gestionarItinerarios() {
-            document.getElementById('contenido').innerHTML = `
-                <div class="itinerarios-container">
-                    <h2>Gestión de Itinerarios</h2>
-                    <div class="filtros">
-                        <input type="text" id="busqueda" placeholder="Buscar por número, origen, destino o tipo..." class="form-control">
-                        <select id="estado" class="form-control">
-                            <option value="">Todos los estados</option>
-                            <option value="pendiente">Pendiente</option>
-                            <option value="en_proceso">En Proceso</option>
-                            <option value="completado">Completado</option>
-                            <option value="cancelado">Cancelado</option>
-                        </select>
-                        <input type="date" id="fechaInicio" class="form-control" placeholder="Fecha inicio">
-                        <input type="date" id="fechaFin" class="form-control" placeholder="Fecha fin">
-                        <button onclick="aplicarFiltros()" class="btn btn-primary">Aplicar Filtros</button>
-                    </div>
-                    <div class="table-responsive">
-                        <table id="tablaItinerarios" class="display" style="width:100%">
-                            <thead>
-                                <tr>
-                                    <th>ID</th>
-                                    <th>Número</th>
-                                    <th>Origen</th>
-                                    <th>Destino</th>
-                                    <th>Fecha</th>
-                                    <th>Estado</th>
-                                    <th>Tipo</th>
-                                    <th>Material</th>
-                                    <th>Acciones</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                            </tbody>
-                        </table>
-                    </div>
-                </div>
-            `;
-
-            // Inicializar DataTable con paginación del servidor
-            $('#tablaItinerarios').DataTable({
-                processing: true,
-                serverSide: true,
-                ajax: {
-                    url: '/api/itinerarios',
-                    headers: {
-                        'Authorization': `Bearer ${token}`
-                    },
-                    data: function(d) {
-                        return {
-                            page: (d.start / d.length) + 1,
-                            limit: d.length,
-                            search: $('#busqueda').val(),
-                            estado: $('#estado').val(),
-                            fechaInicio: $('#fechaInicio').val(),
-                            fechaFin: $('#fechaFin').val()
-                        };
-                    },
-                    dataSrc: function(json) {
-                        json.recordsTotal = json.pagination.total;
-                        json.recordsFiltered = json.pagination.total;
-                        return json.data;
-                    }
-                },
-                columns: [
-                    { data: 'id' },
-                    { data: 'numero' },
-                    { data: 'origen' },
-                    { data: 'destino' },
-                    { 
-                        data: 'fecha',
-                        render: function(data) {
-                            return new Date(data).toLocaleDateString('es-ES');
-                        }
-                    },
-                    { 
-                        data: 'estado',
-                        render: function(data) {
-                            const estados = {
-                                'pendiente': 'Pendiente',
-                                'en_proceso': 'En Proceso',
-                                'completado': 'Completado',
-                                'cancelado': 'Cancelado'
-                            };
-                            return `<span class="estado-${data}">${estados[data]}</span>`;
-                        }
-                    },
-                    { data: 'tipo' },
-                    { data: 'material' },
-                    {
-                        data: null,
-                        render: function(data) {
-                            return `
-                                <button onclick="editarItinerario(${data.id})" class="btn btn-sm btn-primary">Editar</button>
-                                <button onclick="eliminarItinerario(${data.id})" class="btn btn-sm btn-danger">Eliminar</button>
-                            `;
-                        }
-                    }
-                ],
-                language: {
-                    url: '//cdn.datatables.net/plug-ins/1.11.5/i18n/es-ES.json'
-                },
-                responsive: true,
-                pageLength: 10,
-                lengthMenu: [[10, 25, 50, -1], [10, 25, 50, "Todos"]]
+            // Manejar clicks en el menú
+            $('.nav-link').click(function(e) {
+                e.preventDefault();
+                const pagina = $(this).data('page');
+                if (pagina) {
+                    cargarContenido(pagina);
+                    // Actualizar clase active
+                    $('.nav-link').removeClass('active');
+                    $(this).addClass('active');
+                }
             });
-        }
 
-        function aplicarFiltros() {
-            $('#tablaItinerarios').DataTable().ajax.reload();
-        }
-
-        function editarItinerario(id) {
-            // Implementar edición de itinerario
-            alert('Editar itinerario: ' + id);
-        }
-
-        function eliminarItinerario(id) {
-            if (confirm('¿Estás seguro de que deseas eliminar este itinerario?')) {
-                fetch(`/api/itinerarios/${id}`, {
-                    method: 'DELETE',
-                    headers: {
-                        'Authorization': `Bearer ${token}`
+            // Función para cargar contenido
+            function cargarContenido(pagina) {
+                $('#main-content').load(`${pagina}.html`, function(response, status, xhr) {
+                    if (status === "error") {
+                        $('#main-content').html('<div class="alert alert-danger">Error al cargar el contenido</div>');
                     }
-                })
-                .then(response => {
-                    if (!response.ok) throw new Error('Error al eliminar el itinerario');
-                    $('#tablaItinerarios').DataTable().ajax.reload();
-                })
-                .catch(error => {
-                    console.error('Error:', error);
-                    alert('Error al eliminar el itinerario');
                 });
             }
-        }
+        });
     </script>
 </body>
 </html>
