--- a/public/home_planificador.html
+++ b/public/home_planificador.html
@@ -6,6 +6,8 @@
     <title>Planificador - FG Itinerarios</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    
+    <script src="/js/auth.js"></script>
     <style>
         body {
             font-family: 'Roboto', Arial, sans-serif;
@@ -58,7 +60,7 @@
                 </ul>
                 <div class="d-flex">
                     <span class="nav-link text-white me-3" id="user-info">Usuario</span>
-                    <a class="nav-link" href="#" id="logout">Cerrar Sesión</a>
+                    <a class="nav-link" href="#" id="logout" onclick="cerrarSesion()">Cerrar Sesión</a>
                 </div>
             </div>
         </div>
@@ -72,6 +74,7 @@
     <!-- Scripts -->
     <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="/js/auth.js"></script>
     <script>
         $(document).ready(function() {
             // Cargar itinerarios.html por defecto
@@ -97,13 +100,6 @@
                     }
                 });
             }
-
-            // Manejar cierre de sesión
-            $('#logout').click(function(e) {
-                e.preventDefault();
-                // Aquí irá la lógica de cierre de sesión
-                window.location.href = '/login.html';
-            });
         });
     </script>
 </body>
