--- a/public/estaciones.html
+++ b/public/estaciones.html
@@ -4,7 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gestión de Estaciones</title>
+    
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- DataTables CSS -->
     <link href="https://cdn.datatables.net/1.13.7/css/dataTables.bootstrap5.min.css" rel="stylesheet">
+    <!-- Font Awesome -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <style>
         .estacion-activa {
             color: #28a745;
@@ -15,6 +21,35 @@
         .btn-icon {
             padding: 0.25rem 0.5rem;
             margin: 0 0.2rem;
+            border-radius: 4px;
+            transition: all 0.2s ease;
+        }
+        .btn-icon:hover {
+            transform: translateY(-2px);
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+        }
+        .btn-editar {
+            background-color: #1976d2;
+            color: white;
+        }
+        .btn-editar:hover {
+            background-color: #1565c0;
+            color: white;
+        }
+        .btn-eliminar {
+            background-color: #dc3545;
+            color: white;
+        }
+        .btn-eliminar:hover {
+            background-color: #c82333;
+            color: white;
+        }
+        .acciones-cell {
+            white-space: nowrap;
+            text-align: center;
+        }
+        [data-bs-toggle="tooltip"] {
+            cursor: pointer;
         }
     </style>
 </head>
@@ -114,18 +149,34 @@
                     },
                     {
                         data: null,
+                        className: 'acciones-cell',
                         render: function(data) {
                             return `
-                                <button class="btn btn-sm btn-primary btn-icon editar-estacion" data-id="${data.id}">
+                                <button class="btn btn-icon btn-editar editar-estacion" 
+                                        data-id="${data.id}"
+                                        data-bs-toggle="tooltip"
+                                        data-bs-placement="top"
+                                        title="Editar estación">
                                     <i class="fas fa-edit"></i>
                                 </button>
-                                <button class="btn btn-sm btn-danger btn-icon eliminar-estacion" data-id="${data.id}">
+                                <button class="btn btn-icon btn-eliminar eliminar-estacion" 
+                                        data-id="${data.id}"
+                                        data-bs-toggle="tooltip"
+                                        data-bs-placement="top"
+                                        title="Eliminar estación">
                                     <i class="fas fa-trash"></i>
                                 </button>
                             `;
                         }
                     }
-                ]
+                ],
+                drawCallback: function() {
+                    // Reinicializar tooltips después de cada redibujado de la tabla
+                    const tooltipTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="tooltip"]'));
+                    tooltipTriggerList.map(function (tooltipTriggerEl) {
+                        return new bootstrap.Tooltip(tooltipTriggerEl);
+                    });
+                }
             });
 
             // Cargar estaciones
