--- a/public/estaciones.html
+++ b/public/estaciones.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gestión de Estaciones</title>
-    
+
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- DataTables CSS -->
@@ -252,6 +252,7 @@
                     body: JSON.stringify(estacion)
                 })
                 .then(response => {
+                    console.log(response);
                     if (response.ok) {
                         $('#estacionModal').modal('hide');
                         cargarEstaciones();
