--- a/public/estaciones.html
+++ b/public/estaciones.html
@@ -179,12 +179,24 @@
                 }
             });
 
+
+
             // Cargar estaciones
             function cargarEstaciones() {
-                fetch('/api/estaciones')
-                    .then(response => response.json())
+                fetch('/api/estaciones', {
+                    headers: getHeaders()
+                })
+                    .then(response => {
+                        if (response.status === 401) {
+                            window.location.href = '/index.html';
+                            return;
+                        }
+                        return response.json();
+                    })
                     .then(estaciones => {
-                        tablaEstaciones.clear().rows.add(estaciones).draw();
+                        if (estaciones) {
+                            tablaEstaciones.clear().rows.add(estaciones).draw();
+                        }
                     })
                     .catch(error => {
                         console.error('Error al cargar estaciones:', error);
@@ -215,9 +227,14 @@
                 const id = $(this).data('id');
                 if (confirm('¿Estás seguro de que deseas eliminar esta estación?')) {
                     fetch(`/api/estaciones/${id}`, {
-                        method: 'DELETE'
+                        method: 'DELETE',
+                        headers: getHeaders()
                     })
                     .then(response => {
+                        if (response.status === 401) {
+                            window.location.href = '/index.html';
+                            return;
+                        }
                         if (response.ok) {
                             cargarEstaciones();
                         } else {
@@ -246,13 +263,14 @@
 
                 fetch(url, {
                     method: method,
-                    headers: {
-                        'Content-Type': 'application/json'
-                    },
+                    headers: getHeaders(),
                     body: JSON.stringify(estacion)
                 })
                 .then(response => {
-                    console.log(response);
+                    if (response.status === 401) {
+                        window.location.href = '/index.html';
+                        return;
+                    }
                     if (response.ok) {
                         $('#estacionModal').modal('hide');
                         cargarEstaciones();
