--- a/public/usuarios.html
+++ b/public/usuarios.html
@@ -151,7 +151,7 @@
             // Inicializar DataTable
             tablaUsuarios = $('#tablaUsuarios').DataTable({
                 language: {
-                    url: '//cdn.datatables.net/plug-ins/1.13.7/i18n/es-ES.json'
+                    url: '/datatable_lang/es-ES.json'
                 },
                 columns: [
                     { data: 'id' },
