--- a/public/estaciones.html
+++ b/public/estaciones.html
@@ -149,7 +149,7 @@
             // Inicializar DataTable
             tablaEstaciones = $('#tablaEstaciones').DataTable({
                 language: {
-                    url: '//cdn.datatables.net/plug-ins/1.13.7/i18n/es-ES.json'
+                    url: '/datatable_lang/es-ES.json'
                 },
                 columns: [
                     { data: 'id' },
