--- a/public/itinerarios.html
+++ b/public/itinerarios.html
@@ -29,42 +29,33 @@
 </head>
 <body>
     <div class="container-fluid">
-        <div class="header-container">
+        <div class="d-flex justify-content-between align-items-center mb-4">
             <h2>Gestión de Itinerarios</h2>
-            <p class="text-muted">Administra los itinerarios del sistema</p>
+            <button class="btn btn-primary">
+                <i class="fas fa-plus"></i> Nuevo Itinerario
+            </button>
         </div>
 
-        <div class="table-container">
-            <div class="card">
-                <div class="card-body">
-                    <div class="d-flex justify-content-between mb-3">
-                        <button class="btn btn-primary" id="btnNuevoItinerario">
-                            <i class="fas fa-plus"></i> Nuevo Itinerario
-                        </button>
-                        <div class="btn-group">
-                            <button class="btn btn-outline-secondary" id="btnRefresh">
-                                <i class="fas fa-sync-alt"></i> Actualizar
-                            </button>
-                        </div>
-                    </div>
-
-                    <table id="tablaItinerarios" class="table table-striped table-bordered">
-                        <thead>
-                            <tr>
-                                <th>Número</th>
-                                <th>Origen</th>
-                                <th>Destino</th>
-                                <th>Tipo</th>
-                                <th>Fecha</th>
-                                <th>Estado</th>
-                                <th>Planificador</th>
-                                <th>Acciones</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                        </tbody>
-                    </table>
-                </div>
+        <!-- Tabla de Itinerarios-->
+        <div class="card">
+            <div class="card-body">
+                <table id="tablaItinerarios" class="table table-striped table-bordered">
+                    <thead>
+                        <tr>
+                            <th>Número</th>
+                            <th>Origen</th>
+                            <th>Destino</th>
+                            <th>Tipo</th>
+                            <th>Fecha</th>
+                            <th>Estado</th>
+                            <th>Planificador</th>
+                            <th>Acciones</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <!-- Se llenará dinámicamente -->
+                    </tbody>
+                </table>
             </div>
         </div>
     </div>
@@ -122,21 +113,24 @@
     </div>
 
     <!-- Scripts -->
-    <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.datatables.net/1.13.7/js/jquery.dataTables.min.js"></script>
     <script src="https://cdn.datatables.net/1.13.7/js/dataTables.bootstrap5.min.js"></script>
-    
     <script>
         $(document).ready(function() {
+            let tablaItinerarios;
             // Inicializar DataTable
-            const tabla = $('#tablaItinerarios').DataTable({
+            tablaItinerarios = $('#tablaItinerarios').DataTable({
                 language: {
                     url: '/datatable_lang/es-ES.json'
                 },
                 ajax: {
-                    url: '/itinerarios/paginated',
-                    dataSrc: 'data'
+                    url: '/api/itinerarios/paginated',
+                    dataSrc: 'data',
+                    headers: {
+                        'Authorization': getAuthToken()
+                    },
                 },
                 columns: [
                     { data: 'numero' },
@@ -184,11 +178,6 @@
                 order: [[4, 'desc']], // Ordenar por fecha descendente
                 pageLength: 10,
                 responsive: true
-            });
-
-            // Botón de actualizar
-            $('#btnRefresh').click(function() {
-                tabla.ajax.reload();
             });
 
             // Botón nuevo itinerario
